<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>gps_common</name>
  <version>0.2.0</version>
  <description>GPS messages and common routines for use in GPS drivers</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Roehling</maintainer>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gps_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
