<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>gps_common_msgs</name>
  <version>0.2.0</version>
  <description>GPS messages and common routines for use in GPS drivers</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Roehling</maintainer>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gps_common</url>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
